fixed overflow

--- a/src/app/post/view-page/view-page.component.scss
+++ b/src/app/post/view-page/view-page.component.scss
@@ -65,8 +65,9 @@ hr {
 .tm-site-logo i { color: #0CC; }
 
 .tm-main {
-    margin-left: 400px;
-    padding: 80px 100px 25px;
+    // margin-left: 400px;
+    // padding: 80px 100px 25px;
+    // border:2 px solid red;
 }
 
 .tm-post { max-width: 470px; }
@@ -646,3 +647,7 @@ mat-card-content{
 .example-full-width{
     width:40vw;
 }
+
+// img[alt=blog-image]{
+//     max-width:fit-content
+// }
